Time: 14 ms (29.53%), Space: 45.7 MB (92.08%) - LeetHub